# slowmoVideo

src/: CMakeLists.txt
src/cmake/: FindFFMPEG.cmake
src/slowmoVideo/lib/: CMakeLists.txt  defs_sV.h  defs_sV.hpp  ffmpeg_writer.cpp
src/slowmoVideo/project/: CMakeLists.txt  projectPreferences_sV.cpp  projectPreferences_sV.h  xmlProjectRW_sV.cpp
src/slowmoVideo/slowmoCLI/: CMakeLists.txt
src/slowmoVideo/slowmoFlowEdit/: CMakeLists.txt  flowEditCanvas.cpp  mainwindow.cpp  mainwindow.h
src/slowmoVideo/slowmoInfo/: CMakeLists.txt
src/slowmoVideo/slowmoRenderer/: CMakeLists.txt
src/slowmoVideo/slowmoUI/: CMakeLists.txt  mainwindow.cpp  renderPreview.cpp
src/slowmoVideo/slowmoUI/dialogues/: renderingDialog.cpp  renderingDialog.h  renderingDialog.ui
src/slowmoVideo/visualizeFlow/: CMakeLists.txt
